--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="d-flex align-items-center">ABROAD CARE</h1>
+        <h1 class="d-flex align-items-center " style="background-color: rgb(37, 72, 136);"  >ABROAD CARE</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -64,9 +64,9 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-4">
-          <h2 data-aos="fade-up ">Recruitment Agency In Dhaka</h2>
+          <h2 data-aos="fade-up " ><span style="font-size:40px; ;">Welcome to</span> <span style=" font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; "> Abroad Care</span> </h2>
           <blockquote data-aos="fade-up" data-aos-delay="100">
-            <p style="text-align: justify;">Offering job placement and consultation services to individuals searching for employment opportunities abroad. Abroad Care helps to provide the resources and advice needed to successfully find work and settle in a new country. </p>
+            <p style="text-align: justify;">Abroad Care is a recruiting agency located in Dhaka District, Dhaka Division, Offering job placement and consultation services to individuals searching for employment opportunities abroad. Abroad Care helps to provide the resources and advice needed to successfully find work and settle in a new country. </p>
           </blockquote>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
             <a href="contact.html" class="btn-get-started ">CONTACT WITH US</a>
