--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <main id="main">
    
     <!-- ======= Why Choose Us/about Section ======= -->
-    <section id="why-us" style="background-color: rgb(2, 24, 46);"  class="why-us">
+    <section id="why-us" style="background-color: rgb(2, 24, 46);"  class="why-us ">
       <div class="container "  data-aos="fade-up">
 
         <div class="section-header">
@@ -211,7 +211,7 @@ House: 101, Bir Uttom Ziaur Rahman Road, Banani, Dhaka 1213, Bangladesh
       </div>
     </div>
 
-    <div class="footer-legal">
+    <div class="footer-legal" style="background-color: black;">
       <div class="container" >
         <div class="copyright">
           &copy; Copyright <strong><span>Abroad Care</span></strong>. All Rights Reserved
