--- a/services.html
+++ b/services.html
@@ -181,7 +181,7 @@
 
     
 
-    <div class="footer-legal">
+    <div class="footer-legal " style="background-color: black;">
       <div class="container">
         <div class="copyright">
           &copy; Copyright <strong><span>Abroad Care</span></strong>. All Rights Reserved
