--- a/services.html
+++ b/services.html
@@ -49,10 +49,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="home.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="./" class="active">Home</a></li>
+          <li><a href="./about">About</a></li>
+          <li><a href="./services">Services</a></li>
+          <li><a href="./contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
